namespace TimeLedger.Core.Models.Event;

public enum EventOwnerType : byte
{
    User = 1,
    Group = 2
}

